# orca_arm

./: .gitignore  .gitmodules  Makefile  README.md  animate_orcabot.py  build_orcabot_mjcf.py  build_orcabot_urdf.py  orcabot.urdf  orcabot.xml  package_repo.py  pyproject.toml  visualize_orcabot.py
description/: __init__.py
description/mjcf/: orca_arm.xml
description/urdf/: orca_arm.urdf
orca_arm/: __init__.py  orcabot.urdf  orcabot.xml
orca_arm/assets/: 9ba3e77f_link0.stl
tests/: test_description.py
